[package]
name = "kyber-kem"
version = "0.1.2"
description = "Kyber IND-CCA2 KEM in Rust"
authors = ["parazyd <parazyd@dyne.org>"]
repository = "https://github.com/parazyd/kyber-kem"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
rand = "0.8"
sha3 = "0.10"
subtle = "2.5"

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
regex = "1.10.2"

[[bench]]
name = "ops"
harness = false
